# ChangeLog for sys-apps/acl
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/ChangeLog,v 1.30 2004/06/24 21:56:53 agriffis Exp $

  14 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> acl-2.2.13-r1.ebuild,
  acl-2.2.13-r2.ebuild:
  IUSE; tidy

  14 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> acl-2.1.1-r1.ebuild,
  acl-2.2.13.ebuild:
  clean older ebuilds

  06 May 2004; Michael McCabe <randy@gentoo.org> acl-2.2.13-r2.ebuild:
  Unset platform variable for s390

  17 Apr 2004; Travis Tilley <lv@gentoo.org> acl-2.2.13-r1.ebuild,
  acl-2.2.13-r2.ebuild, acl-2.2.13.ebuild:
  marked as stable on amd64

  01 Mar 2004; Tom Gall <tgall@gentoo.org> acl-2.2.13-r2.ebuild:
  bug #42937 affects ppc64 as well, utilize the same fix

  27 Feb 2004; Luca Barbato <lu_zero@gentoo.org> acl-2.2.13-r2.ebuild:
  Fix bug #42937, same way used by sparc team

  25 Feb 2004; Tom Gall <tgall@gentoo.org> acl-2.2.13-r2.ebuild
  Stable on ppc64

  21 Feb 2004; Jason Wever <weeve@gentoo.org> acl-2.2.13-r2.ebuild:
  Changed sparc fix so now it's an actual fix rather than a workaround.

  04 Dec 2003; <agriffis@gentoo.org> acl-2.2.13-r2.ebuild:
  Stable on alpha, sparc, ia64 to support vim-6.2-r5

  28 Nov 2003; Jason Wever <weeve@gentoo.org> acl-2.1.1-r1.ebuild,
  acl-2.2.13-r1.ebuild, acl-2.2.13-r2.ebuild, acl-2.2.13.ebuild:
  Fixed ebuilds for sparc, resolves bug #34611 (see for more details).

*acl-2.2.13-r2 (08 Oct 2003)

  08 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> acl-2.2.13-r2.ebuild:
  fix bug #30731

  02 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org> acl-2.2.13-r1.ebuild,
  acl-2.2.13.ebuild:
  changed to depend on >=attr-2.4

  27 Sep 2003; Bartosch Pixa <darkspecter@gentoo.org> acl-2.2.13-r1.ebuild:
  set ppc in keywords

  24 Sep 2003; Robin H. Johnson <robbat2@gentoo.org> acl-2.2.13-r1.ebuild,
  acl-2.2.13.ebuild:
  bump to x86
