@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/acl-2.2.13-r2.ebuild,v 1.14 2004/06/24 21:56:53 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/acl-2.2.13-r2.ebuild,v 1.15 2004/07/19 02:41:48 robbat2 Exp $
 
 DESCRIPTION="Access control list utilities, libraries and headers"
 HOMEPAGE="http://oss.sgi.com/projects/xfs"
@@ -8,7 +8,7 @@ SRC_URI="ftp://oss.sgi.com/projects/xfs/download/cmd_tars/${P}.src.tar.gz"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~x86 ppc sparc ~mips alpha arm ~hppa amd64 ia64 ppc64 s390"
+KEYWORDS="x86 ppc sparc ~mips alpha arm ~hppa amd64 ia64 ppc64 s390"
 IUSE="nls"
 
 RDEPEND=">=sys-apps/attr-2.4
