@@ -1,9 +1,12 @@
 # ChangeLog for sys-apps/attr
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.34 2004/06/25 20:19:36 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.35 2004/07/19 02:45:29 robbat2 Exp $
 
    01 Mar 2004; Tom Gall <tgall@gentoo.org> attr-2.4.7-r1.ebuild:
    stable on ppc64, unset PLATFORM as per bug #42937
+
+  18 Jul 2004; Robin H. Johnson <robbat2@gentoo.org> attr-2.4.8.ebuild:
+  stable on x86.
 
   25 Jun 2004; Aron Griffis <agriffis@gentoo.org> attr-2.4.8.ebuild:
   QA - fix use invocation
