@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/acl
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/ChangeLog,v 1.30 2004/06/24 21:56:53 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/ChangeLog,v 1.31 2004/07/19 02:41:48 robbat2 Exp $
+
+  18 Jul 2004; Robin H. Johnson <robbat2@gentoo.org> acl-2.2.13-r2.ebuild:
+  stable on x86.
 
   14 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> acl-2.2.13-r1.ebuild,
   acl-2.2.13-r2.ebuild:
